edit storage service to configure kafka
